<resources>
    <string name="app_name">H20</string>
    <string name="str_enter_valid_name">Enter a valid name</string>
    <string name="str_enter_valid_email_address">Enter a valid email address</string>
    <string name="str_enter_valid_phone">Enter a valid phone number</string>
    <string name="str_enter_valid_username">Please enter a valid username</string>
    <string name="str_enter_valid_password_policy">Password should be minimum 6 characters long</string>
    <string name="str_enter_valid_address">Enter a valid address</string>
    <string name="str_the_h20">THE-H20</string>
    <string name="text_login">Login</string>
    <string name="text_dont_have_an_account">Don\'t have an account? <font color="#000000"><b>Register</b></font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_forget_password">Forget Password ?</string>
    <string name="str_login_fragment">Login Fragment</string>
    <string name="str_register_fragment">Register Fragment</string>
    <string name="str_forget_password_">Forget Password</string>
    <string name="text_forgot_password_description">Enter your email address we\'ll send you an email to reset your password</string>
    <string name="str_submit">Submit</string>
    <string name="str_create_account">Create Account</string>
    <string name="str_first_name">First Name</string>
    <string name="str_last_name">Last Name</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="text_terms_and_conditions">I agree to Terms and Conditions</string>
    <string name="text_register">Register</string>
    <string name="text_already_have_an_account">Already have an account? <font color="#000000"><b>Login</b></font></string>
    <string name="str_please_wait">Please Wait</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_order">My Orders</string>
    <string name="text_product">Product</string>
    <string name="text_sold">Sold</string>
    <string name="str_news">News &amp; Services</string>
    <string name="str_products">Products</string>
    <string name="str_product_title">Product Title</string>
    <string name="str_product_price">Product Price</string>
    <string name="str_product_description">Product Description</string>
    <string name="str_product_quantity">Product Quantity</string>
    <string name="str_save">Save</string>
    <string name="permission_required">Permission required for app to work properly</string>
    <string name="str_invalid_field">Invalid field</string>
    <string name="str_no_product_added_yet">No Product Added Yet</string>
    <string name="str_stock_quantity">Stock Quantity</string>
    <string name="str_go_to_cart">Go To Cart</string>
    <string name="str_add_to_cart">Add To Cart</string>
    <string name="str_no_item_added_to_cart">No Item Added To Cart</string>
    <string name="str_subtotal">Subtotal</string>
    <string name="str_shipping">Shipping</string>
    <string name="str_total">Total</string>
    <string name="str_checkout">Checkout</string>
    <string name="str_chat">Chat</string>
    <string name="str_my_cart">My Cart</string>
    <string name="str_logout">Logout</string>
    <string name="title_activity_check_out">CheckOutActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="str_services">Services</string>
    <string name="str_service_name">Service Name</string>
    <string name="str_service_quantity">Service Quantity</string>
    <string name="str_service_description">Service Description</string>
    <string name="str_home">Home</string>
    <string name="str_profile">Profile</string>
    <string name="str_edit">Edit</string>
    <string name="str_signout">SignOut</string>
    <string name="str_phone">Phone</string>
    <string name="str_gender">Gender</string>
    <string name="str_my_orders">My Orders</string>
    <string name="str_no_order_yet">No Order yet</string>
</resources>