<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.auth.ForgotPasswordFragment">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back_arrow"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:elevation="@dimen/_8sdp"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_margin="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/back_arrow_black"
        android:tint="@color/white"
        tools:ignore="UnusedAttribute" />
    <LinearLayout
        android:id="@+id/heading_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:background="@drawable/drawable_gradient_splash_background"
        android:gravity="center"
        tools:ignore="MissingConstraints">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/img_logo" />
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center"
            android:text="@string/str_the_h20"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="@color/white" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_forgot_heading"
        android:text="@string/str_forget_password_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading_layout"
        style="@style/ShopKartHeadingStyle" />
    <TextView
        android:id="@+id/tv_forgot_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_forgot_password_description"
        android:gravity="center"
        android:textColor="@color/gray"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:fontFamily="@font/quicksand"
        android:textSize="@dimen/_12sdp"
        android:includeFontPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_heading" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_forgot_password_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:hint="@string/str_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_subtitle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_submit"
        style="@style/ShopKartButtonStyle"
        android:text="@string/str_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_forgot_password_email" />
</androidx.constraintlayout.widget.ConstraintLayout>