<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.product.ProductDetailsFragment">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_product_detail_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:adjustViewBounds="true"
        android:background="@color/product_image_placeholder_color"/>
    <LinearLayout
        android:id="@+id/linear_layout_product_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/dashboard_item_details_bg"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">
        <TextView
            android:id="@+id/tv_product_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="@dimen/_14ssp"
            android:text="Poster of Homer" />
        <TextView
            android:id="@+id/tv_product_detail_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="30"
            android:fontFamily="@font/quicksand_medium"
            android:textSize="@dimen/_16ssp" />
    </LinearLayout>
    <TextView
        android:id="@+id/iv_product_detail_desc_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14ssp"
        android:layout_marginHorizontal="@dimen/_16ssp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/str_product_description"
        android:textSize="@dimen/_16sdp" />
    <TextView
        android:id="@+id/iv_product_detail_desc_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:fontFamily="@font/quicksand_medium"
        android:text="rwrwrwrwrwr"
        android:textSize="@dimen/_14ssp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginHorizontal="@dimen/_16sdp">
        <TextView
            android:id="@+id/iv_product_detail_stock_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/str_stock_quantity"
            android:textSize="@dimen/_16ssp" />
        <TextView
            android:id="@+id/iv_product_detail_stock_quantity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:layout_marginStart="@dimen/_8sdp"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:includeFontPadding="false"
            android:background="@drawable/drawable_white_border_background"
            android:text="9"
            android:textSize="@dimen/_16ssp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:textColor="@color/black"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_add_to_cart"
        style="@style/ShopKartButtonStyle"
        android:text="@string/str_add_to_cart"
        android:layout_width="match_parent" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_go_to_cart"
        style="@style/ShopKartButtonStyle"
        android:text="@string/str_go_to_cart"
        android:layout_width="match_parent" />
</LinearLayout>